--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^12.5.1",
     "express": "^4.17.1",
     "ffmpeg-static": "^4.2.7",
+    "quick.db": "^7.1.3",
     "fs": "0.0.1-security",
     "genius-lyrics": "^4.2.9",
     "i18n": "^0.13.2",
