--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@discord-player/extractor": "^2.0.2",
+    "@discord-player/downloader": "^2.0.3",
     "@discordjs/opus": "^0.3.3",
     "discord-buttons": "^2.4.1",
     "discord-player": "^4.1.0",
