--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discord-player/downloader": "^2.0.3",
     "@discordjs/opus": "^0.3.3",
     "discord-buttons": "^2.4.1",
+    "ytdl-core": "^4.8.3",
     "discord-player": "^4.1.0",
     "discord.js": "^12.5.1",
     "express": "^4.17.1",
